<resources>
    <string name="app_name">医依</string>
    <string name="app_type">患者端</string>

    <string name="scheduling">正在管理您的健康</string>

    <string name="action_settings">设置</string>

    <string name="confirm_exit">再按一次退出程序</string>

    <string name="loading">加载中……</string>
    <string name="failure">加载失败</string>
    <string name="no_data">无相关数据</string>
    <string name="sending">发送中</string>

    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="navigation_drawer_close">关闭导航栏</string>

    <string name="home">首页</string>
    <string name="record">记录</string>
    <string name="appointment">预约</string>
    <string name="me">我</string>

    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="nickname_empty">请输入昵称</string>
    <string name="username">帐号</string>
    <string name="username_hint">病案号/手机号</string>
    <string name="username_empty">请输入帐号</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="password_confirm_hint">请确认登录密码</string>
    <string name="password_different">两次输入密码不一致</string>
    <string name="password_empty">请输入密码</string>
    <string name="register">注册</string>
    <string name="register_hint">新用户？立即注册</string>
    <string name="forget_password">忘记密码？</string>

    <string name="ok">确认</string>
    <string name="cancel">取消</string>

    <string name="network_error">网络连接失败</string>

    <string name="login_success">登录成功</string>
    <string name="username_error">用户不存在</string>
    <string name="password_error">密码错误</string>

    <string name="register_success">注册成功</string>
    <string name="username_exist">该用户名已被注册</string>
    <string name="nickname_exist">该昵称已被注册</string>

    <string name="not_loggedin">请重新登录</string>

    <string name="logo">logo</string>

    <string name="add_sign">+</string>
    <string name="colon">：</string>

    <string name="add">添加</string>
    <string name="add_success">添加成功</string>
    <string name="sync_success">同步完成</string>
    <string name="sync_failure">同步失败</string>

    <string name="measure_data">测量数据</string>

    <string name="measure_title">测量</string>
    <string name="measure_text">内容</string>

    <string name="daily">每日</string>
    <string name="period">周期</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="second_after">秒后</string>

    <string name="measure">各项指标</string>
    <string name="no_measure">未测</string>
    <string name="temperature">体温</string>
    <string name="pules">脉搏</string>
    <string name="heart_rate">心率</string>
    <string name="blood_pressure">血压</string>

    <string name="measure_schedule">定时提醒</string>
    <string name="temperature_unit">°C</string>
    <string name="pules_unit">次/分</string>
    <string name="heart_rate_unit">次/分</string>
    <string name="blood_pressure_unit">mmHg</string>

    <string name="record_type">健康状况</string>
    <string name="record_highest">危险</string>
    <string name="record_high">高值</string>
    <string name="record_good">良好</string>
    <string name="record_title">诊断</string>
    <string name="record_text">医嘱</string>
    <string name="record_suggestion">康复建议</string>
    <string name="no_record">无最近记录</string>

    <string name="appointment_hint">预约记录</string>
    <string name="appointment_time">时间</string>
    <string name="appointment_type">类型</string>
    <string name="appointment_symptom">症状</string>
    <string name="appointment_other">其他</string>
    <string name="appointment_error">请输入症状</string>

    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="birthday">出生日期</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="id_number">身份证号</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="address">联系地址</string>

    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="error_id">身份证号格式不正确</string>

    <string name="bluetooth_unavailable">正在连接</string>
    <string name="open_bluetooth">打开蓝牙</string>
    <string name="opening_bluetooth">打开蓝牙中</string>
    <string name="bluetooth_unopened">蓝牙未打开</string>
    <string name="bluetooth_opened">蓝牙已经打开</string>
    <string name="open_bluetooth_hint">请打开蓝牙</string>
    <string name="search_bluetooth">搜索蓝牙</string>
    <string name="send_bluetooth_hint">数据</string>
    <string name="send_bluetooth">发送数据</string>
    <string name="empty_hint">数据不能为空</string>
    <string name="send_bluetooth_success">发送成功</string>
    <string name="connect_bluetooth_hint">请先连接设备</string>
    <string name="connect_bluetooth_success">连接成功</string>
    <string name="connecting_bluetooth">正在连接</string>
    <string name="waiting_bluetooth">等待连接</string>
    <string name="no_bluetooth">无连接</string>

</resources>
