<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Measure.Schedule.AddMeasureScheduleActivity">

    <include layout="@layout/tool_bar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/measure_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/measure_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/daily" />

            <CheckBox
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/period" />

            <LinearLayout
                android:id="@+id/period_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/period_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0  "
                    android:inputType="number"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour" />

                <EditText
                    android:id="@+id/period_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0  "
                    android:inputType="number"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute" />

                <EditText
                    android:id="@+id/period_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0  "
                    android:inputType="number"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <android.support.v4.view.PagerTabStrip
                    android:id="@+id/pager_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom" />
            </android.support.v4.view.ViewPager>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
